Cloned project into intellij